<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".view.activity.CreateTripActivity">

    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        card_view:cardBackgroundColor="@color/colorPrimary"
        card_view:cardCornerRadius="0dp"
        card_view:cardElevation="2dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_vertical_margin">

            <android.support.v7.widget.Toolbar
                android:id="@+id/trip_toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize" />

            <EditText
                android:id="@+id/trip_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:hint="@string/label_trip_name"
                android:inputType="textCapSentences"
                android:singleLine="true"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                android:textColor="#fff"
                android:theme="@style/TextAppearance.App.TextInputLayout" />

            <TextView
                android:id="@+id/trip_name_error"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:paddingLeft="4dp"
                android:paddingStart="4dp"
                android:text="@string/help_trip_private"
                android:textAppearance="@style/TextAppearance.Design.Error"
                android:visibility="gone" />
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <!-- Body -->

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin">

            <android.support.v7.widget.AppCompatCheckBox
                android:id="@+id/private_check"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:layout_marginTop="@dimen/appbar_padding_top"
                android:checked="true"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:text="@string/label_trip_private"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

            <TextView
                android:id="@+id/trip_private_help"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:layout_marginStart="4dp"
                android:paddingBottom="4dp"
                android:paddingTop="4dp"
                android:text="@string/help_trip_private"
                android:textAppearance="@style/TextAppearance.AppCompat.Caption" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/leaving_from_wrapper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:nextFocusDown="@+id/destination"
                android:paddingTop="@dimen/activity_vertical_margin">

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/leaving_from"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="false"
                    android:hint="@string/label_trip_leaving_from"
                    android:imeOptions="actionNext"
                    android:inputType="textNoSuggestions"
                    android:singleLine="true" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/destination_wrapper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/activity_vertical_margin">

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/destination"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="false"
                    android:hint="@string/label_trip_destination"
                    android:imeOptions="actionDone"
                    android:inputType="textNoSuggestions"
                    android:singleLine="true" />
            </android.support.design.widget.TextInputLayout>

            <!-- Date pickers -->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="false"
                android:orientation="horizontal"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingTop="@dimen/activity_vertical_margin">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:clickable="true"
                    android:orientation="vertical">

                    <android.support.v7.widget.AppCompatTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="4dp"
                        android:layout_marginStart="4dp"
                        android:text="@string/label_trip_from"
                        android:textAppearance="@style/TextAppearance.AppCompat.Caption" />

                    <android.support.v7.widget.AppCompatTextView
                        android:id="@+id/date_from"
                        style="@style/Base.Widget.AppCompat.Spinner.Underlined"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        android:textColor="#000" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:clickable="true"
                    android:orientation="vertical">

                    <android.support.v7.widget.AppCompatTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="4dp"
                        android:layout_marginStart="4dp"
                        android:text="@string/label_trip_to"
                        android:textAppearance="@style/TextAppearance.AppCompat.Caption" />

                    <android.support.v7.widget.AppCompatTextView
                        android:id="@+id/date_to"
                        style="@style/Base.Widget.AppCompat.Spinner.Underlined"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        android:textColor="#000" />
                </LinearLayout>
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:layout_marginStart="4dp"
                android:text="@string/label_trip_transportation"
                android:textAppearance="@style/TextAppearance.AppCompat.Caption" />

            <android.support.v7.widget.AppCompatSpinner
                android:id="@+id/transportation"
                style="@style/Base.Widget.AppCompat.Spinner.Underlined"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/array_transportation_modes"
                android:paddingLeft="0dp"
                android:paddingStart="0dp" />

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/create_trip_button"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:text="@string/label_trip_create_button"
                android:textColor="#fff" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>
